<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/card_balance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/card_balance_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/pay_card_balance_title_label"
            android:textColor="#a6d4f5"
            android:textSize="@dimen/pay_guanyingcard_card_balance_title_textsize"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_balance_package_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/pay_guanyingcard_card_balance_package_info_margintop"
        >

        <TextView
            android:id="@+id/package_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/pay_package_price"
            android:textSize="@dimen/pay_guanyingcard_package_price_textsize"/>
        <TextView
            android:id="@+id/package_exprice_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/package_price"
            android:layout_centerHorizontal="true"
            android:text="@string/package_exprice_label"
            android:textSize="@dimen/pay_guanyingcard_package_exprice_textsize"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/pay_guanyingcard_submit_panel_margintop"
        >

        <Button
            android:id="@+id/card_balance_submit"
            android:layout_width="@dimen/tv_guide_channel_item_width"
            android:layout_height="@dimen/pay_channel_weixin_height"
            android:background="@drawable/paychannel_btn_selector"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusLeft="@+id/balance_pay"
            android:text="@string/card_balance_submit"
            android:textColor="#FFF8F8FF"
            android:textSize="@dimen/pay_guanyingcard_card_balance_submit_textsize"/>

        <Button
            android:id="@+id/card_balance_cancel"
            android:layout_width="@dimen/tv_guide_channel_item_width"
            android:layout_height="@dimen/pay_channel_weixin_height"
            android:layout_marginLeft="@dimen/pay_guanyingcard_card_balance_cancel_marginleft"
            android:layout_toRightOf="@id/card_balance_submit"
            android:background="@drawable/paychannel_btn_selector"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/card_balance_cancel"
            android:textColor="#FFF8F8FF"
            android:textSize="@dimen/pay_guanyingcard_card_balance_cancel_textsize"/>
    </RelativeLayout>

</LinearLayout>