<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/payment_min_width"
    android:layout_height="@dimen/payment_min_height"
    android:minHeight="@dimen/payment_min_height"
    android:minWidth="@dimen/payment_min_width"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/payment_title_h"
        android:layout_marginLeft="@dimen/payment_title_ml"
        android:gravity="center_vertical">

        <TextView
            android:textSize="@dimen/textsize_48sp"
            android:id="@+id/payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/login_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/payment_h_divider"
        android:layout_marginLeft="@dimen/payment_divider_margin"
        android:layout_marginRight="@dimen/payment_divider_margin"
        android:background="@drawable/divider_person" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pay_type_layout"
            android:layout_width="@dimen/paytype_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/weixin"
                android:layout_width="@dimen/payment_type_btn_width"
                android:layout_height="@dimen/pay_channel_weixin_height"
                android:layout_marginTop="@dimen/pay_channel_weixin_margintop"
                android:background="@drawable/paychannel_btn_selector"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:text="@string/weixinpay_button_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/pay_channel_weixin_textsize" />

            <Button
                android:id="@+id/alipay"
                android:layout_width="@dimen/payment_type_btn_width"
                android:layout_height="@dimen/pay_channel_weixin_height"
                android:layout_marginTop="@dimen/pay_channel_weixin_margintop"
                android:background="@drawable/paychannel_btn_selector"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:text="@string/zhifubao_pay_button_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/pay_channel_weixin_textsize" />

            <Button
                android:id="@+id/videocard"
                android:layout_width="@dimen/payment_type_btn_width"
                android:layout_height="@dimen/pay_channel_weixin_height"
                android:layout_marginTop="@dimen/pay_channel_weixin_margintop"
                android:background="@drawable/paychannel_btn_selector"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:text="@string/guanyingcard_pay_button_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/pay_channel_weixin_textsize" />

            <Button
                android:id="@+id/balance_pay"
                android:layout_width="@dimen/payment_type_btn_width"
                android:layout_height="@dimen/pay_channel_weixin_height"
                android:layout_marginTop="@dimen/pay_channel_weixin_margintop"
                android:background="@drawable/paychannel_btn_selector"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:text="@string/yu_e_pay_button_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/pay_channel_weixin_textsize" />


        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/payment_h_divider"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/payment_divider_margin"
            android:layout_marginTop="@dimen/payment_divider_margin"
            android:background="@drawable/portrait_divider_person" />

        <FrameLayout
            android:id="@+id/fragment_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

</LinearLayout>