<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/qrcode_pay"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/pay_qrcode_pay_panel_marginleft"
    android:layout_marginTop="@dimen/pay_qrcode_pay_panel_margintop"
    android:layout_weight="2.1"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/qrcode_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/qrcodeview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/pay_qrcode_pay_qrcodeview_marginleft"
            android:layout_marginRight="@dimen/pay_qrcode_pay_qrcodeview_marginright"
            android:layout_marginTop="@dimen/pay_qrcode_pay_qrcodeview_margintop"
            android:layout_weight="2.2"
            android:background="#FFFFFFFF" />

        <RelativeLayout
            android:id="@+id/payinfo_panel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pay_qrcode_pay_payinfo_panel_marginleft"
            android:layout_marginTop="@dimen/pay_qrcode_pay_payinfo_panel_margintop"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/payinfo_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_payinfo_price_label"
                android:textSize="@dimen/pay_qrcode_pay_payinfo_price_textsize" />

            <TextView
                android:id="@+id/payinfo_exprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/payinfo_price"
                android:text="@string/pay_payinfo_exprice_label"
                android:textSize="@dimen/pay_qrcode_pay_payinfo_exprice_textsize" />

            <TextView
                android:id="@+id/payinfo_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/payinfo_exprice"
                android:text="@string/pay_payinfo_introduce_label"
                android:textSize="@dimen/pay_qrcode_pay_payinfo_introduce_textsize" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/daikou_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/ali_prompt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="您已开通免密码支付"
            android:textColor="#FFF8F8FF"
            android:textSize="@dimen/pay_guanyingcard_card_balance_title_textsize" />

        <TextView
            android:id="@+id/ali_prompt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ali_prompt1"
            android:text="请点击按钮完成交易"
            android:textColor="#FFF8F8FF"
            android:textSize="@dimen/pay_guanyingcard_card_balance_title_textsize" />

        <TextView
            android:id="@+id/ali_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ali_prompt2"
            android:gravity="start"
            android:text="@string/pay_card_balance_title_label"
            android:textColor="#FFF8F8FF"
            android:textSize="@dimen/pay_guanyingcard_card_balance_title_textsize" />

        <TextView
            android:id="@+id/ali_exprie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/ali_price"
            android:layout_below="@+id/ali_price"
            android:gravity="start"
            android:text="@string/pay_card_balance_title_label"
            android:textColor="#FFF8F8FF"
            android:textSize="@dimen/pay_guanyingcard_card_balance_title_textsize" />

        <Button
            android:id="@+id/alipay_submit"
            android:layout_width="@dimen/pay_person_login_pay_btn_submit_w"
            android:layout_height="@dimen/pay_channel_weixin_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ali_exprie"
            android:layout_marginTop="@dimen/pay_guanyingcard_card_balance_package_info_margintop"
            android:background="@drawable/paychannel_btn_selector"
            android:text="支付"
            android:textColor="#FFF8F8FF"
            android:textSize="@dimen/pay_guanyingcard_card_balance_submit_textsize" />
    </RelativeLayout>

</LinearLayout>